# GROUPS

./: .gitignore  CMakeLists.txt  Common.cmake  GROUPS.cmake  GRTestProject.cpp  GRTestProject.xml  Groups.cmake  README.md  SuperBuild.cmake
GroupwiseRegistration/: GRTestProject.cpp  GroupwiseRegistration.cpp  GroupwiseRegistration.h  SphericalHarmonics.h  itkTimer.cpp
Mesh/: Mesh.cpp  Mesh.h  MeshIO.cpp  MeshIO.h  VtkIO.cpp  VtkIO.h
Modules/: CMakeLists.txt
Modules/CLI/: CMakeLists.txt
Modules/CLI/Groups/: CMakeLists.txt  Groups.cxx  Groups.xml  GroupwiseRegistration.cpp  GroupwiseRegistration.h  newuoa.h
Modules/Scripted/: CMakeLists.txt
Modules/Scripted/GroupWiseRegistrationModule/: CMakeLists.txt  GroupWiseRegistrationModule.py
Modules/Scripted/GroupWiseRegistrationModule/Resources/UI/: GroupWiseRegistrationModule.ui
Modules/Scripted/RigidAlignmentModule/: CMakeLists.txt  RigidAlignmentModule.py
Modules/Scripted/RigidAlignmentModule/Resources/UI/: RigidAlignmentModule.ui
SuperBuild/: External_LAPACK.cmake  External_MeshLib.cmake  External_RigidAlignment.cmake  External_SlicerExecutionModel.cmake  External_SurfRemesh.cmake  External_VTK.cmake
src/: CMakeLists.txt  GRTestProject.txt  GRTestProject.xml  GR_test.cpp  GR_test_fs.cpp  Geom.h  GroupwiseRegistration.cpp  GroupwiseRegistration.h  SphericalHarmonics.h
wrapper/: CMakeLists.txt  GRTestProject.cpp  GRTestProject.xml  Groups.cxx  Groups.xml  GroupwiseRegistration.xml  main.cpp
