add_library(Registration_SOURCES
                STATIC
                GroupwiseRegistration.cpp)


SEMMacroBuildCLI(
		NAME Groups
		EXECUTABLE_ONLY
		TARGET_LIBRARIES ${LAPACK_LIBRARIES} Mesh Registration_SOURCES ${VTK_LIBRARIES}
		INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR} 
		RUNTIME_OUTPUT_DIRECTORY ${SlicerExecutionModel_DEFAULT_CLI_RUNTIME_OUTPUT_DIRECTORY}
		LIBRARY_OUTPUT_DIRECTORY ${SlicerExecutionModel_DEFAULT_CLI_LIBRARY_OUTPUT_DIRECTORY}
		ARCHIVE_OUTPUT_DIRECTORY ${SlicerExecutionModel_DEFAULT_CLI_ARCHIVE_OUTPUT_DIRECTORY}
		INSTALL_RUNTIME_DESTINATION ${SlicerExecutionModel_DEFAULT_CLI_INSTALL_RUNTIME_DESTINATION}
		INSTALL_LIBRARY_DESTINATION ${SlicerExecutionModel_DEFAULT_CLI_INSTALL_LIBRARY_DESTINATION}
		INSTALL_ARCHIVE_DESTINATION ${SlicerExecutionModel_DEFAULT_CLI_INSTALL_ARCHIVE_DESTINATION}
)
